# prompt-forge

./: .gitignore  CLAUDE.md  INSTALLATION.md  LICENSE  README.md  RELEASE.md  latest.json  package-lock.json  package.json
.claude/: settings.local.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_add_usage_tracking.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  mcp_server.rs  models.rs  parser.rs
src/lib/: stores.ts  types.ts
src/lib/components/: AgentsView.svelte  InstructionsView.svelte  MCPView.svelte  SettingsView.svelte  Sidebar.svelte  SkillsView.svelte  Titlebar.svelte  Toast.svelte
src/lib/stores/: toasts.ts
src/routes/: +layout.svelte  +page.svelte
