[package]
name = "prompt-forge"
version = "0.1.0"
description = "A local workshop for crafting AI agents, skills, and instructions with MCP server"
authors = ["you"]
edition = "2021"

[lib]
name = "prompt_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"

